--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@fontsource-variable/montserrat": "^5.2.6",
+    "@fontsource/montserrat": "^5.2.6",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -20,7 +22,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "font-demo": "echo 'Font demo available at /font-demo route'",
+    "font-check": "echo 'Checking font installation...' && npm list @fontsource/montserrat @fontsource-variable/montserrat"
   },
   "eslintConfig": {
     "extends": [
